; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/atm/extr_atm.c_atm_set_diagnostic_config.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/atm/extr_atm.c_atm_set_diagnostic_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@disable_atm = common dso_local global i64 0, align 8
@KERN_NOT_SUPPORTED = common dso_local global i32 0, align 4
@atm_diagnostic_config = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @atm_set_diagnostic_config(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i64, i64* @disable_atm, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @KERN_NOT_SUPPORTED, align 4
  store i32 %7, i32* %2, align 4
  br label %13

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  store i32 %9, i32* @atm_diagnostic_config, align 4
  %10 = load i32, i32* @atm_diagnostic_config, align 4
  %11 = call i32 @commpage_update_atm_diagnostic_config(i32 %10)
  %12 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %8, %6
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @commpage_update_atm_diagnostic_config(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
